@@ -19,7 +19,7 @@ GeomHex <- proto(Geom, {
   }
   
   required_aes <- c("x", "y")
-  default_aes <- function(.) aes(colour=NA, fill = "grey50", size=0.5, alpha = 1)
+  default_aes <- function(.) aes(colour=NA, fill = "grey50", size=0.5, alpha = NA)
   default_stat <- function(.) StatBinhex
   guide_geom <- function(.) "polygon"
   
