@@ -36,7 +36,7 @@ GeomLinerange <- proto(Geom, {
   objname <- "linerange"
 
   default_stat <- function(.) StatIdentity
-  default_aes <- function(.) aes(colour = "black", size=0.5, linetype=1, alpha = 1)
+  default_aes <- function(.) aes(colour = "black", size=0.5, linetype=1, alpha = NA)
   guide_geom <- function(.) "path"
   required_aes <- c("x", "ymin", "ymax")
 
