@@ -40,7 +40,7 @@ GeomStep <- proto(Geom, {
   }
   details <- "Equivalent to plot(type='s')."
 
-  default_aes <- function(.) aes(colour="black", size=0.5, linetype=1, alpha = 1)
+  default_aes <- function(.) aes(colour="black", size=0.5, linetype=1, alpha = NA)
   
   draw <- function(., data, scales, coordinates, direction = "hv", ...) {
     data <- stairstep(data, direction)
